syntax="proto3";

service user {
  rpc getUserList(stream SearchWheres) returns (stream UserList) {}
}

message UserList {
  message UserMap {
    map<string, string> rowMap = 1;
  }
  repeated UserMap usermap = 1;
}


message SearchWheres {
    message SearchWhere {
        string key = 1;
        repeated string val = 2;
    }
    repeated SearchWhere wheres = 1;
}
